Fix NPE (#2938)
MultiMap.get() may return null.